[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/m6x11.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/ItemLine/ItemLine.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="ItemLine" type="HBoxContainer"]
margin_right = 553.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
script = ExtResource( 2 )

[node name="ItemTitle" type="Label" parent="."]
margin_right = 151.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 1 )
text = "Title"
align = 1
valign = 1

[node name="ItemDesc" type="Label" parent="."]
margin_left = 155.0
margin_right = 458.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Desc"
valign = 1
autowrap = true

[node name="BuyButton" type="Button" parent="."]
margin_left = 462.0
margin_right = 553.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
custom_fonts/font = SubResource( 2 )
text = "220â‚¬"

[connection signal="pressed" from="BuyButton" to="." method="_on_BuyButton_pressed"]
